--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ command.py
 __pycache__/mysocket.cpython-310.pyc
 client.txt
 files
+__pycache__/file.cpython-310.pyc
+__pycache__/server.cpython-310.pyc
+.gitignore
